# deep_learning

./: pyproject.toml
mod1/: DL_Lab1_Exercise1_Solutions.ipynb  DL_Lab1_Exercise2_Solutions.ipynb  DL_Lab1_Exercise3_Solutions.ipynb
mod2/: Deep Learning_Lab2_Exercise1_Solution.ipynb  Deep Learning_Lab2_Exercise2_Solution.ipynb  Deep Learning_Lab2_Exercise3_Solution.ipynb
mod3/: Deep Learning_Lab3_Exercise1_Solutions.ipynb  Deep Learning_Lab3_Exercise2_Solutions.ipynb  Deep Learning_Lab3_Exercise3_Solutions.ipynb
